dx/force-app/main/default/objects/ltng_HeroNotification__c/ltng_HeroNotification__c.object-meta.xml
<CustomObject>
    <description>Represents a message we want to share out through a large hero image (banner)</description>
    <label>Hero Notification</label>
    <nameField>
        <label>Hero Notifications Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hero Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>