dx/force-app/main/default/objects/ltng_HeroNotification__c/fields/AlternativeText__c.field-meta.xml
<CustomField>
    <fullName>AlternativeText__c</fullName>
    <inlineHelpText>Alternative text provided for the hero notification card.
(used for screen readers)</inlineHelpText>
    <label>Alternative Text</label>
    <type>TextArea</type>
</CustomField>