dx/force-app/main/default/objects/ltng_HeroNotification__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Long text description provided under the title of the hero card.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>