dx/force-app/main/default/objects/ltng_HeroNotification__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <inlineHelpText>The last date time that the hero image should be available.
(or blank if it never expires)</inlineHelpText>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>