dx/force-app/main/default/objects/ltng_HeroNotification__c/fields/Permission__c.field-meta.xml
<CustomField>
    <fullName>Permission__c</fullName>
    <inlineHelpText>The Custom Permission API name that allows the person to see this image.
(or null if everyone should)</inlineHelpText>
    <label>Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>