dx/force-app/main/default/objects/ltng_HeroNotification__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <inlineHelpText>Items with higher priority are shown first in the set
(lower or blank are shown last)</inlineHelpText>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>