dx/force-app/main/default/objects/ltng_HeroNotification__c/fields/ResourceName__c.field-meta.xml
<CustomField>
    <fullName>ResourceName__c</fullName>
    <inlineHelpText>The name of the hero image resource to show</inlineHelpText>
    <label>Resource Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>