dx/force-app/main/default/objects/ltng_HeroNotification__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <inlineHelpText>The starting date the hero image should be available.
(or blank if available immediately)</inlineHelpText>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>