dx/force-app/main/default/objects/ltng_HeroNotification__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <description>Can be URL Schemes, partial urls, etc.</description>
    <inlineHelpText>Target URL to navigate the user to.</inlineHelpText>
    <label>Target</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>