dx/force-app/main/default/objects/ltng_HeroNotification__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Please note that the Visualforce page can include URL Parameters.</description>
    <inlineHelpText>Whether the target is a Record Id, Visualforce page, URL, etc.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>URL</fullName>
                <default>true</default>
                <label>URL</label>
            </value>
            <value>
                <fullName>Knowledge Article</fullName>
            </value>
            <value>
                <fullName>Named Page</fullName>
            </value>
            <value>
                <fullName>Navigation Item Page</fullName>
            </value>
            <value>
                <fullName>Object Page</fullName>
            </value>
            <value>
                <fullName>Record Page</fullName>
            </value>
            <value>
                <fullName>Record Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>